change more color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -569,7 +569,7 @@ small {
 /* .teal */
 
 .teal {
-  background-color: #008073 !important;
+  background-color: #FC4445 !important;
 }
 
 /* .teal {
